--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -57,21 +57,21 @@
         </section>
         <section>
             <div class="textosomos">
-                <a>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi autem enim consequuntur in
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi autem enim consequuntur in
                     sapiente architecto inventore dolorum voluptatibus voluptatem ipsum, ipsa aperiam, debitis fugit
-                    perferendis laborum labore impedit fugiat. Ullam?</a>
-                <h3>Misión</h3>
-                <a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse accusantium maxime iste minima ipsa
+                    perferendis laborum labore impedit fugiat. Ullam?</p>
+                <h2>Misión</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse accusantium maxime iste minima ipsa
                     ratione laboriosam vel blanditiis iure obcaecati ut temporibus molestias consequatur, tenetur velit
-                    placeat libero? Hic, maiores!</a>
-                <h3>Vision</h3>
-                <a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse accusantium maxime iste minima ipsa
+                    placeat libero? Hic, maiores!</p>
+                <h2>Vision</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse accusantium maxime iste minima ipsa
                     ratione laboriosam vel blanditiis iure obcaecati ut temporibus molestias consequatur, tenetur velit
-                    placeat libero? Hic, maiores!</a>
-                <h3>Valores</h3>
-                <a>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse accusantium maxime iste minima ipsa
+                    placeat libero? Hic, maiores!</p>
+                <h2>Valores</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse accusantium maxime iste minima ipsa
                     ratione laboriosam vel blanditiis iure obcaecati ut temporibus molestias consequatur, tenetur velit
-                    placeat libero? Hic, maiores!</a>
+                    placeat libero? Hic, maiores!</p>
             </div>
         </section>
 
