--- a/pages/termycond.html
+++ b/pages/termycond.html
@@ -52,31 +52,31 @@
         </section>
         <section>
             <div class="politicas">
-                <p>1. Registro de Datos de Carácter Personal
-                    Le informamos que los datos personales recabados por la Empresa mediante los formularios extendidos
+                <h2>1. Registro de Datos de Carácter Personal</h2>
+                <p>Le informamos que los datos personales recabados por la Empresa mediante los formularios extendidos
                     en el Sitio quedarán incorporados y serán tratados en nuestro ficheros con el fin de poder
                     facilitar, agilizar y cumplir los compromisos establecidos entre la Empresa y el Usuario o el
                     mantenimiento de la relación que se establezca en los formularios que este rellene, o para atender
                     una solicitud o consulta del mismo.</p>
-                <p>2. Base legal para el tratamiento de los datos personales
-                    La base legal para el tratamiento de los datos personales es el consentimiento. La Empresa se
+                <h2>2. Base legal para el tratamiento de los datos personales</h2>
+                <p>p>base legal para el tratamiento de los datos personales es el consentimiento. La Empresa se
                     compromete a recabar el consentimiento expreso y verificable del Usuario para el tratamiento de sus
                     datos personales para uno o varios fines específicos. El Usuario tendrá derecho
                     a retirar su consentimiento en cualquier momento.</p>
-                <p>3.Fines del tratamiento a que se destinan los datos personales
-                    Los datos personales son recabados y gestionados por la Empresa con la finalidad de poder facilitar
+                <h2>3.Fines del tratamiento a que se destinan los datos personales</h2>
+                <p>Los datos personales son recabados y gestionados por la Empresa con la finalidad de poder facilitar
                     el mantenimiento de la relación que se establezca en los formularios que el usuario rellene o para
                     atender una solicitud o consulta. Igualmente, los datos podrán ser utilizados con una finalidad
                     comercial de personalización, operativa y estadística, y actividades propias del objeto social de la
                     Empresa, así como para la extracción, almacenamiento de datos y estudios de marketing para adecuar
                     el Contenido ofertado al Usuario, así como mejorar la calidad, funcionamiento y
                     navegación por el Sitio Web.</p>
-                <p>4.Períodos de retención de los datos personales
-                    Los datos personales solo serán retenidos durante el tiempo mínimo necesario para los fines de su
+                <h2>4.Períodos de retención de los datos personales</h2>
+                <p> Los datos personales solo serán retenidos durante el tiempo mínimo necesario para los fines de su
                     tratamiento y, en todo caso, únicamente durante el siguiente plazo: 2 años, o hasta que el Usuario
                     solicite su supresión.</p>
-                <p>5.Secreto y seguridad de los datos personales
-                    La Empresa se compromete a adoptar las medidas técnicas y organizativas necesarias, según el nivel
+                <h2>5.Secreto y seguridad de los datos personales</h2>
+                <p> La Empresa se compromete a adoptar las medidas técnicas y organizativas necesarias, según el nivel
                     de seguridad adecuado al riesgo de los datos recogidos, de forma que se garantice la seguridad de
                     los datos de carácter personal y se evite la destrucción, pérdida o alteración accidental o ilícita
                     de datos personales transmitidos, conservados o tratados de otra forma, o la
@@ -93,8 +93,8 @@
                     obligación legal o contractual que dicha confidencialidad sea respetada por sus empleados,
                     asociados, y toda persona a la cual le haga accesible la información. No tendrá carácter de
                     confidencialidad los datos que tengan como objetivo principal ser exhibidos en el Sitio Web.</p>
-                <p>6.Derechos derivados del tratamiento de los datos personales
-                    El Usuario podrá ejercer los siguientes derechos:
+                <h2>6.Derechos derivados del tratamiento de los datos personales</h2>
+                <p> El Usuario podrá ejercer los siguientes derechos:
                     i. Derecho de acceso: Es el derecho del Usuario a obtener confirmación de si la Empresa está
                     tratando o no sus datos personales y, en caso
                     afirmativo, obtener información sobre sus datos concretos de carácter personal y del tratamiento que
@@ -121,19 +121,20 @@
                     Esta solicitud y todo otro documento adjunto podrá enviarse a la siguiente dirección y/o correo
                     electrónico: contacto@elevepropiedadescom.ar
                     Dirección postal: Av. Pellegrini 1811 PA OF. 01, Rosario, 2000, Santa Fe.</p>
-                <p>7.Reclamaciones ante la autoridad de control en caso de que el Usuario considere que existe un
+                <h2>7.Reclamaciones ante la autoridad de control</h2>
+                <p>en caso de que el Usuario considere que existe un
                     problema o infracción de la normativa vigente en la forma en la que se están tratando sus datos
                     personales, tendrá derecho a la tutela judicial efectiva y a presentar una reclamación ante una
                     autoridad de control, en particular, la Dirección Nacional de Protección de Datos Personales.
                     https://www.argentina.gob.ar/aaip/datosper-sonales</p>
-                <p>8.Colaboración con la autoridad pública
-                    La Empresa. podrá revelar la Información Personal de sus usuarios bajo requerimiento de la
+                <h2>8.Colaboración con la autoridad pública</h2>
+                <p> La Empresa. podrá revelar la Información Personal de sus usuarios bajo requerimiento de la
                     autoridades judiciales o gubernamentales competentes para efectos de investigaciones conducidas por
                     ellas, aunque no exista una orden ni una citación ejecutiva o judicial, o por ejemplo (y sin
                     limitación a este supuesto) cuando se trate de investigaciones de carácter penal o de fraude o las
                     relacionadas con piratería informática o la violación de derechos de autor.</p>
-                <p>9.Aceptación y cambios en esta política de privacidad
-                    Es necesario que el Usuario haya leído y esté conforme con las condiciones sobre la protección de
+                <h2>9.Aceptación y cambios en esta política de privacidad</h2>
+                <p>Es necesario que el Usuario haya leído y esté conforme con las condiciones sobre la protección de
                     datos de carácter personal contenidas en esta Política de Privacidad, así como que acepte el
                     tratamiento de sus datos personales para que el Responsable del tratamiento pueda proceder al mismo
                     en la forma, durante los plazos y para las finalidades indicadas. El uso del El Sitio Web implicará
