--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,23 +25,23 @@
             </a>
             <ul>
                 <li><a class="active" href="../index.html">INICIO</a></li>
-                <li><a href="../pages/quienessomos.html">QUIENES SOMOS</a></li>
-                <li><a href="../pages/administracion.html">ADMINISTRACIÓN</a></li>
-                <li><a href="../pages/alquiler.html">ALQUILER</a>
+                <li><a href="quienessomos.html">QUIENES SOMOS</a></li>
+                <li><a href="administracion.html">ADMINISTRACIÓN</a></li>
+                <li><a href="alquiler.html">ALQUILER</a>
                     <ul class="hidden">
-                        <li><a href="../pages/alquiler.html">Un dormitorio</a></li>
-                        <li><a href="../pages/alquiler.html">Dos dormitorios</a></li>
-                        <li><a href="../pages/alquiler.html">Tres Dormitorios</a></li>
+                        <li><a href="alquiler.html">Un dormitorio</a></li>
+                        <li><a href="alquiler.html">Dos dormitorios</a></li>
+                        <li><a href="alquiler.html">Tres Dormitorios</a></li>
                     </ul>
                 </li>
-                <li><a href="../pages/venta.html">VENTA</a>
+                <li><a href="venta.html">VENTA</a>
                     <ul class="hidden">
-                        <li><a href="../pages/venta.html">Un dormitorio</a></li>
-                        <li><a href="../pages/venta.html">Dos dormitorios</a></li>
-                        <li><a href="../pages/venta.html">Tres Dormitorios</a></li>
+                        <li><a href="venta.html">Un dormitorio</a></li>
+                        <li><a href="venta.html">Dos dormitorios</a></li>
+                        <li><a href="venta.html">Tres Dormitorios</a></li>
                     </ul>
                 </li>
-                <li><a href="../pages/contacto.html">CONTACTO</a></li>
+                <li><a href="contacto.html">CONTACTO</a></li>
             </ul>
         </nav>
         <!--FIN DEL MENU-->
@@ -116,12 +116,12 @@
                 </div>
                 <div class="titulomenupie">
                     <h4>SERVICIOS</h4>
-                    <li><a class="textomenupie" href="../pages/quienessomos.html">Quienes Somos</a></li>
-                    <li><a class="textomenupie" href="../pages/administracion.html">Administración</a></li>
-                    <li><a class="textomenupie" href="../pages/alquiler.html">Alquiler</a>
-                    <li><a class="textomenupie" href="../pages/venta.html">Venta</a>
-                    <li><a class="textomenupie" href="../pages/contacto.html">Contacto</a></li>
-                    <li><a class="textomenupie" href="../pages/termycond.html">Políticas de Privacidad</a></li>
+                    <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                    <li><a class="textomenupie" href="administracion.html">Administración</a></li>
+                    <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
+                    <li><a class="textomenupie" href="venta.html">Venta</a>
+                    <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                    <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
                     </p>
                 </div>
                 <div class="newsletter">
