agregado grids parte 1

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -82,31 +82,36 @@
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
-                <li><i class="fa-sharp fa-solid fa-phone fa-2x"></i></li>
-                <li>
-                    <p>TELEFONO</p>
-                </li>
-                <li>(0341) 3132818</li>
-                <li><i class="fa-solid fa-envelope fa-2x"></i></li>
-                <li>
-                    <p>EMAIL</p>
-                </li>
-                <li><a class="cartel1"
-                        href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
-                <li><i class="fa-solid fa-location-dot fa-2x"></i></li>
-                <li>
-                    <p>OFICINA</p>
-                </li>
-                <li><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank"> Pellegrini 1811 Of. 01 - Rosario
-                </li></a>
+                <div class="cartelcolum1">
+                    <li><i class="fa-sharp fa-solid fa-phone fa-2x"></i></li>
+                    <li>
+                        <p>TELEFONO</p>
+                    </li>
+                    <li>(0341) 3132818</li>
+                </div>
+                <div class="cartelcolum2">
+                    <li><i class="fa-solid fa-envelope fa-2x"></i></li>
+                    <li>
+                        <p>EMAIL</p>
+                    </li>
+                    <li><a class="cartel1"
+                            href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
+                </div>
+                <div class="cartelcolum3">
+                    <li><i class="fa-solid fa-location-dot fa-2x"></i></li>
+                    <li>
+                        <p>OFICINA</p>
+                    </li>
+                    <li><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank"> Pellegrini 1811 Of. 01 - Rosario
+                    </li></a>
+                </div>
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
 
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
-            <div class="piedepagina">
-                <div>
+                <div class="piecolum1">
                     <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
                     <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
                             1811 Of. 01</li></a>
