--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <!--FIN BUSCADOR DE PROPIEDADES-->
 
         <!--DESTACADAS-->
-        <section>
+        <section class="propdestacadas">
             <h2 class="destacadas">PROPIEDADES DESTACADAS</h2>
             <div id="slider">
                 <ul class="slider">
@@ -145,22 +145,21 @@
         <!--FIN DESTACADAS-->
 
         <!--POR QUE CONTACTARNOS-->
-        <section>
-            <div class="porquecontactarnos">
-                <div class="porqueinfo">
-                    <i class="fa-sharp fa-solid fa-house fa-2x"></i>
-                    <p>
-                    <h4 class="porqueinfotexto">Venta</h4>Nos enfocamos en lograr que realices un buen negocio</p>
-                    <i class="fa-sharp fa-solid fa-building fa-2x"></i>
-                    <p>
-                    <h4 class="porqueinfotexto">Alquiler</h4>Te ayudamos a encontrar el lugar perfecto
-                    donde vivir</p>
-                    <i class="fa-solid fa-money-check-dollar fa-2x"></i>
-                    <p>
-                    <h4 class="porqueinfotexto">Administración de Alquileres</h4>Administramos tu propiedad en
-                    alquiler con total profesionalismo y
-                    transparencia</p>
-                </div>
+        <section class="porquecontactarnos">
+            <div></div>
+            <div class="porqueinfo">
+                <i class="fa-sharp fa-solid fa-house fa-2x"></i>
+                <p>
+                <h4 class="porqueinfotexto">Venta</h4>Nos enfocamos en lograr que realices un buen negocio</p>
+                <i class="fa-sharp fa-solid fa-building fa-2x"></i>
+                <p>
+                <h4 class="porqueinfotexto">Alquiler</h4>Te ayudamos a encontrar el lugar perfecto
+                donde vivir</p>
+                <i class="fa-solid fa-money-check-dollar fa-2x"></i>
+                <p>
+                <h4 class="porqueinfotexto">Administración de Alquileres</h4>Administramos tu propiedad en
+                alquiler con total profesionalismo y
+                transparencia</p>
             </div>
         </section>
         <!--FIN POR QUE CONTACTARNOS-->
@@ -168,32 +167,39 @@
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
-                <li><i class="fa-sharp fa-solid fa-phone fa-2x"></i></li>
-                <li>
-                    <p>TELEFONO</p>
-                </li>
-                <li>(0341) 3132818</li>
-                <li><i class="fa-solid fa-envelope fa-2x"></i></li>
-                <li>
-                    <p>EMAIL</p>
-                </li>
-                <li><a class="cartel1"
-                        href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
-                <li><i class="fa-solid fa-location-dot fa-2x"></i></li>
-                <li>
-                    <p>OFICINA</p>
-                </li>
-                <li><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank"> Pellegrini 1811 Of. 01 - Rosario</li></a>
+                <div class="cartelcolum1">
+                    <li><i class="fa-sharp fa-solid fa-phone fa-2x"></i></li>
+                    <li>
+                        <p>TELEFONO</p>
+                    </li>
+                    <li>(0341) 3132818</li>
+                </div>
+                <div class="cartelcolum2">
+                    <li><i class="fa-solid fa-envelope fa-2x"></i></li>
+                    <li>
+                        <p>EMAIL</p>
+                    </li>
+                    <li><a class="cartel1"
+                            href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
+                </div>
+                <div class="cartelcolum3">
+                    <li><i class="fa-solid fa-location-dot fa-2x"></i></li>
+                    <li>
+                        <p>OFICINA</p>
+                    </li>
+                    <li><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank"> Pellegrini 1811 Of. 01 - Rosario
+                    </li></a>
+                </div>
             </div>
         </section>
         <!--FIN CARTEL DE CONTACTO-->
 
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
-            <div class="piedepagina">
-                <div>
+                <div class="piecolum1">
                     <li class="logopie"><img width="210" src="./img/logo blanco.png" alt="logo_blanco"></li>
-                    <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini 1811 Of. 01</li></a>
+                    <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
+                            1811 Of. 01</li></a>
                     <li class="textopie">Teléfono: (0341) 3132818</li>
                     <li><a class="textopie"
                             href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
