--- a/pages/termycond.html
+++ b/pages/termycond.html
@@ -148,69 +148,82 @@
         </section>
 
 
-        <section>
-            <!--cartel de contacto-->
-            <div id="cartelcontacto">
-                <li><i class="fa-sharp fa-solid fa-phone fa-2x"></i></li>
-                <li>
-                    <p>TELEFONO</p>
-                </li>
-                <li>(0341) 3132818</li>
-                <li><i class="fa-solid fa-envelope fa-2x"></i></li>
-                <li>
-                    <p>EMAIL</p>
-                </li>
-                <li><a class="cartel1"
-                        href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
-                <li><i class="fa-solid fa-location-dot fa-2x"></i></li>
-                <li>
-                    <p>OFICINA</p>
-                </li>
-                <li>Av. Pellegrini 1811 Of. 01 - Rosario</li>
+        <!--cartel de contacto-->
+        <section id="cartelcontacto">
+            <div class="carteldecontacto">
+                <div class="cartelcolum1">
+                    <li><i class="fa-sharp fa-solid fa-phone fa-2x"></i></li>
+                    <li>
+                        <p>TELEFONO</p>
+                    </li>
+                    <li>(0341) 3132818</li>
+                </div>
+                <div class="cartelcolum2">
+                    <li><i class="fa-solid fa-envelope fa-2x"></i></li>
+                    <li>
+                        <p>EMAIL</p>
+                    </li>
+                    <li><a class="cartel1"
+                            href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
+                </div>
+                <div class="cartelcolum3">
+                    <li><i class="fa-solid fa-location-dot fa-2x"></i></li>
+                    <li>
+                        <p>OFICINA</p>
+                    </li>
+                    <li><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank"> Pellegrini 1811 Of. 01 - Rosario
+                    </li></a>
+                </div>
             </div>
         </section>
+        <!--FIN CARTEL DE CONTACTO-->
 
+        <!--PIE DE PAGINA-->
         <section id="piedepagina">
-            <!--PIE DE PAGINA-->
-            <div>
-                <li class="textopie1"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
-                <li class="textopie1">Av. Pellegrini 1811 Of. 01</li>
-                <li class="textopie1">Teléfono: (0341) 3132818</li>
-                <li><a class="textopie1"
-                        href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
-            </div>
-            <div class="menupie">
-                <h4 class="titulomenupie">SERVICIOS</h4>
-
-                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
-                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
-                <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
-                <li><a class="textomenupie" href="venta.html">Venta</a>
-                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
-                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
-                </p>
-            </div>
-            <div class="menupie">
-                <h4 class="newsletter">NEWSLETTER</h4>
-                <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
-                <input type="submit" value="Suscribirse"></p>
-            </div>
-            <div class="menupie">
-                <h4>REDES</h4>
-                <li class="redespie"><i class="fa-brands fa-facebook fa-2x"></i> <i
-                        class="fa-brands fa-instagram fa-2x"></i></li>
+                <div class="piecolum1">
+                    <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
+                    <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
+                            1811 Of. 01</li></a>
+                    <li class="textopie">Teléfono: (0341) 3132818</li>
+                    <li><a class="textopie"
+                            href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
+                </div>
+                <div class="titulomenupie">
+                    <h4>SERVICIOS</h4>
+                    <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                    <li><a class="textomenupie" href="administracion.html">Administración</a></li>
+                    <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
+                    <li><a class="textomenupie" href="venta.html">Venta</a>
+                    <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                    <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
+                    </p>
+                </div>
+                <div class="newsletter">
+                    <h4>NEWSLETTER</h4>
+                    <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
+                    <input type="submit" value="Suscribirse"></p>
+                </div>
+                <div class="redespie">
+                    <h4>REDES</h4>
+                    <a href="https://www.facebook.com/" target="blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                    <a href="https://www.instagram.com/" target="blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+                </div>
             </div>
         </section>
+        <!--FIN PIE DE PAGINA-->
     </main>
+    <!--FIN DEL MAIN-->
 
-    <!--footer-->
+    <!--FOOTER-->
     <footer class="footer">
-        <div class="fontfooter">Copyright: 2022. Todos los derechos reservados®</div>
-        <div class="linkfooter"><a class="linkfooter" href="../index.html" class="linkfooter">Eleve Negocios
-                Inmobiliarios.</a></div>
+        <div>
+            <li>Copyright: 2022. Todos los derechos reservados®</li>
+            <li class="linkfooter"><a class="linkfooter" href="../index.html" class="linkfooter">Eleve Negocios
+                    Inmobiliarios.</a>
+            </li>
+        </div>
     </footer>
-
-    </main>
+    <!-- FIN DEL FOOTER-->
 </body>
 
 </html>
