--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -48,35 +48,37 @@
     </header>
     <!--FIN DEL HEADER-->
 
+
+    <!--por que elegirnos?-->
     <main>
-        <!--por que elegirnos?-->
         <section class="fondoadm">
             <div class="porqueadmin">
-                <h1 class="tituloadmin">¿POR QUE ELEGIRNOS?</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat vitae veritatis nostrum placeat, nam
-                    excepturi expedita sit. Sit laudantium doloremque, sequi odio aliquid quaerat itaque aut similique
-                    numquam totam expedita?</p>
-                <div class="columnadmin">
-                    <div class="subtituloadmin">
-                        <h2>Confianza</h2>
-                        <p>La satisfacción de nuestros clientes nos da como una empresa confiable y también dedicada</p>
-                    </div>
-                    <div class="subtituloadmin">
-                        <h2>Seguridad</h2>
-                        <p>Todas nuestras operaciones son exclusivamente realizadas por corredores matriculados</p>
-                    </div>
-                    <div class="subtituloadmin">
-                        <h2>Modernismo</h2>
-                        <p>Nos preocupamos por los desafíos en materia de mercado que implican una constante
-                            capacitación</p>
-                    </div>
-                    <div class="subtituloadmin">
-                        <h2>Compromiso</h2>
-                        <p>Estamos avocados a las exigencias particulares de cada cliente a fin de lograr el mejor
-                            negocio </p>
-                    </div>
+                <div class="tituloadmin">
+                    <h1>¿POR QUE ELEGIRNOS?</h1>
+                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat vitae veritatis
+                        nostrum placeat, nam
+                        excepturi expedita sit. Sit laudantium doloremque, sequi odio aliquid quaerat itaque aut
+                        similique
+                        numquam totam expedita?</p>
                 </div>
-            </div>
+                <div class="cuadro1">
+                    <h2>Confianza</h2>
+                    <p>La satisfacción de nuestros clientes nos da como una empresa confiable y también dedicada</p>
+                </div>
+                <div class="cuadro2">
+                    <h2>Seguridad</h2>
+                    <p>Todas nuestras operaciones son exclusivamente realizadas por corredores matriculados</p>
+                </div>
+                <div class="cuadro3">
+                    <h2>Modernismo</h2>
+                    <p>Nos preocupamos por los desafíos en materia de mercado que implican una constante
+                        capacitación</p>
+                </div>
+                <div class="cuadro4">
+                    <h2>Compromiso</h2>
+                    <p>Estamos avocados a las exigencias particulares de cada cliente a fin de lograr el mejor
+                        negocio </p>
+                </div>
             </div>
         </section>
 
@@ -88,18 +90,19 @@
             <div class="grid-container">
                 <div class="formcontacto">
                     <div class="tipoform">
-                    <form action="./formpage.html" method="get" enctype="application/x-www-form-urlencoded">
-                        <label for="Nombre" >Nombre: </label><input id="Nombre" type="text"
-                            name="nombre" placeholder="Ingresa tu Nombre">
-                        <label for="Apellido">Apellido: </label><input id="Apellido" type="text" name="apellido"
-                            placeholder="Ingresa tu Apellido">
-                        <label for="Email">Email: </label><input id="Email" type="text" name="email"
-                            placeholder="Ingresa tu Email">
-                        <label for="mensaje">Tu Mensaje: </label><textarea name="mensaje" id="mensaje"
-                            placeholder="Tu Mensaje"></textarea>
-                        <input type="submit" value="Enviar formulario" call="btn-enviar" />                    </form>
+                        <form action="./formpage.html" method="get" enctype="application/x-www-form-urlencoded">
+                            <label for="Nombre"></label><input id="Nombre" type="text" name="nombre"
+                                placeholder="Ingresa tu Nombre">
+                            <label for="Apellido"> </label><input id="Apellido" type="text" name="apellido"
+                                placeholder="Ingresa tu Apellido">
+                            <label for="Email"> </label><input id="Email" type="text" name="email"
+                                placeholder="Ingresa tu Email">
+                            <label for="mensaje"></label><textarea name="mensaje" id="mensaje"
+                                placeholder="Tu Mensaje"></textarea>
+                            <input type="submit" value="Enviar formulario" call="btn-enviar" />
+                        </form>
+                    </div>
                 </div>
-            </div>
                 <div class="formmap"><iframe
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3347.8246760778566!2d-60.65321898481346!3d-32.955637980918446!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95b7ab12ba391c31%3A0x7b1698044e00dcb7!2sAv.%20Pellegrini%201811%2C%20S2000BUF%20Rosario%2C%20Santa%20Fe!5e0!3m2!1ses!2sar!4v1666912227965!5m2!1ses!2sar"
                         width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
@@ -122,7 +125,7 @@
 
 
 
-        
+
 
 
         <!--cartel de contacto-->
@@ -157,34 +160,34 @@
 
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
-                <div class="piecolum1">
-                    <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
-                    <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
-                            1811 Of. 01</li></a>
-                    <li class="textopie">Teléfono: (0341) 3132818</li>
-                    <li><a class="textopie"
-                            href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
-                </div>
-                <div class="titulomenupie">
-                    <h4>SERVICIOS</h4>
-                    <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
-                    <li><a class="textomenupie" href="administracion.html">Administración</a></li>
-                    <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
-                    <li><a class="textomenupie" href="venta.html">Venta</a>
-                    <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
-                    <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
-                    </p>
-                </div>
-                <div class="newsletter">
-                    <h4>NEWSLETTER</h4>
-                    <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
-                    <input type="submit" value="Suscribirse"></p>
-                </div>
-                <div class="redespie">
-                    <h4>REDES</h4>
-                    <a href="https://www.facebook.com/" target="blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
-                    <a href="https://www.instagram.com/" target="blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
-                </div>
+            <div class="piecolum1">
+                <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
+                <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
+                        1811 Of. 01</li></a>
+                <li class="textopie">Teléfono: (0341) 3132818</li>
+                <li><a class="textopie"
+                        href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
+            </div>
+            <div class="titulomenupie">
+                <h4>SERVICIOS</h4>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
+                <li><a class="textomenupie" href="venta.html">Venta</a>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
+                </p>
+            </div>
+            <div class="newsletter">
+                <h4>NEWSLETTER</h4>
+                <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
+                <input type="submit" value="Suscribirse"></p>
+            </div>
+            <div class="redespie">
+                <h4>REDES</h4>
+                <a href="https://www.facebook.com/" target="blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                <a href="https://www.instagram.com/" target="blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+            </div>
             </div>
         </section>
         <!--FIN PIE DE PAGINA-->
