--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -51,57 +51,56 @@
     <!--INICIO DEL MAIN-->
     <main>
         <!--propiedades alquiler-->
-        <section class="propiedadesfondo">
-            <div class="titulopropiedades">
+        <!--BUSCADOR DE PROPIEDADES-->
+        <div class="mainalquiler">
+            <div class="titulo">
                 <h1>PROPIEDADES EN ALQUILER</h1>
             </div>
-        </section>
-
-        <!--BUSCADOR DE PROPIEDADES-->
-        <section class="buscadorfondoprop">
-            <div class="buscadortituloprop">
-                <h2>BUSCADOR DE PROPIEDADES</h2>
-            </div>
-            <div class="wrapper-prop">
-                <h3>EL LUGAR QUE<span></span></h3>
-                <p>ENCONTRALO ACA:</p>
-            </div>
-            <div class="fondopropiedadesalqventa">
-                <div class="formulario">
-                    <label for="operacion"></label>
-                    <select name="operacion" id="operacion">
-                        <option hidden selected>Operación</option>
-                        <option value="Venta">Venta</option>
-                        <option value="Alquiler">Alquiler</option>
-                        <option value="Alquiler Temporario">Alquiler Temporario</option>
-                    </select>
+            <div class="seccion-buscador">
+                <div class="subtitle">
+                    <h2>BUSCADOR DE PROPIEDADES</h2>
                 </div>
-                <div class="formulario">
-                    <label for="tipopropiedad"></label>
-                    <select name="tipopropiedad" id="tipopropiedad">
-                        <option hidden selected>Tipo de Propiedad</option>
-                        <option value="casa">Casa</option>
-                        <option value="cochera">Cochera</option>
-                        <option value="departamento">Departamento</option>
-                        <option value="deposito">Deposito</option>
-                        <option value="galpón">Galpón</option>
-                        <option value="localcomercial">Local Comercial</option>
-                        <option value="oficinas">Oficina</option>
-                        <option value="PH">PH</option>
-                        <option value="terrenolote">Terreno o Lote</option>
-                    </select>
+                <div class="wrapper-propiedades">
+                    <h2>EL LUGAR QUE<span></span></h2>
+                    <p>ENCONTRALO ACA:</p>
                 </div>
-                <form call="button" action="../../form-result.php" method="get" target="_blank">
-                    <div class="buscar">
-                        <input type="search" name="busqueda" placeholder="Ubicación o palabra clave">
+                <div class="buscador">
+                    <div class="formularioalquiler">
+                        <label for="operacion"></label>
+                        <select name="operacion" id="operacion">
+                            <option hidden selected>Operación</option>
+                            <option value="Venta">Venta</option>
+                            <option value="Alquiler">Alquiler</option>
+                            <option value="Alquiler Temporario">Alquiler Temporario</option>
+                        </select>
                     </div>
-                </form>
-                <div>
-                    <input type="submit" value="Buscar" class="button">
+                    <div class="formularioalquiler">
+                        <label for="tipopropiedad"></label>
+                        <select name="tipopropiedad" id="tipopropiedad">
+                            <option hidden selected>Tipo de Propiedad</option>
+                            <option value="casa">Casa</option>
+                            <option value="cochera">Cochera</option>
+                            <option value="departamento">Departamento</option>
+                            <option value="deposito">Deposito</option>
+                            <option value="galpón">Galpón</option>
+                            <option value="localcomercial">Local Comercial</option>
+                            <option value="oficinas">Oficina</option>
+                            <option value="PH">PH</option>
+                            <option value="terrenolote">Terreno o Lote</option>
+                        </select>
+                    </div>
+                    <form call="button" action="../../form-result.php" method="get" target="_blank">
+                        <div class="buscaralquiler">
+                            <input type="search" name="busqueda" placeholder="Ubicación o palabra clave">
+                        </div>
+                    </form>
+                    <div class="buttonalq">
+                        <input type="submit" value="Buscar" class="buttonalquiler">
+                    </div>
                 </div>
             </div>
-            </div>
-        </section>
+        </div>
+
         <!--FIN BUSCADOR DE PROPIEDADES-->
 
 
@@ -246,34 +245,34 @@
 
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
-                <div class="piecolum1">
-                    <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
-                    <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
-                            1811 Of. 01</li></a>
-                    <li class="textopie">Teléfono: (0341) 3132818</li>
-                    <li><a class="textopie"
-                            href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
-                </div>
-                <div class="titulomenupie">
-                    <h4>SERVICIOS</h4>
-                    <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
-                    <li><a class="textomenupie" href="administracion.html">Administración</a></li>
-                    <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
-                    <li><a class="textomenupie" href="venta.html">Venta</a>
-                    <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
-                    <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
-                    </p>
-                </div>
-                <div class="newsletter">
-                    <h4>NEWSLETTER</h4>
-                    <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
-                    <input type="submit" value="Suscribirse"></p>
-                </div>
-                <div class="redespie">
-                    <h4>REDES</h4>
-                    <a href="https://www.facebook.com/" target="blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
-                    <a href="https://www.instagram.com/" target="blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
-                </div>
+            <div class="piecolum1">
+                <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
+                <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
+                        1811 Of. 01</li></a>
+                <li class="textopie">Teléfono: (0341) 3132818</li>
+                <li><a class="textopie"
+                        href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
+            </div>
+            <div class="titulomenupie">
+                <h4>SERVICIOS</h4>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
+                <li><a class="textomenupie" href="venta.html">Venta</a>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
+                </p>
+            </div>
+            <div class="newsletter">
+                <h4>NEWSLETTER</h4>
+                <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
+                <input type="submit" value="Suscribirse"></p>
+            </div>
+            <div class="redespie">
+                <h4>REDES</h4>
+                <a href="https://www.facebook.com/" target="blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                <a href="https://www.instagram.com/" target="blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+            </div>
             </div>
         </section>
         <!--FIN PIE DE PAGINA-->
