margenes modificados buscadores

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <input type="search" name="busqueda" placeholder="Ubicación o palabra clave">
                     </div>
                 </form>
-                <div>
+                <div class="buttonindex">
                     <input type="submit" value="Buscar" class="button">
                 </div>
             </div>
