modificaciones terminos y condiciones

--- a/pages/termycond.html
+++ b/pages/termycond.html
@@ -47,7 +47,7 @@
 
     <main>
         <!--quienes somos-->
-        <section class="quienessomosfondo">
+        <section class="polprivacidad">
             <h1>POLÍTICA DE PRIVACIDAD Y PROTECCIÓN DE DATOS</h1>
         </section>
         <section>
@@ -59,7 +59,7 @@
                     mantenimiento de la relación que se establezca en los formularios que este rellene, o para atender
                     una solicitud o consulta del mismo.</p>
                 <h2>2. Base legal para el tratamiento de los datos personales</h2>
-                <p>p>base legal para el tratamiento de los datos personales es el consentimiento. La Empresa se
+                <p>base legal para el tratamiento de los datos personales es el consentimiento. La Empresa se
                     compromete a recabar el consentimiento expreso y verificable del Usuario para el tratamiento de sus
                     datos personales para uno o varios fines específicos. El Usuario tendrá derecho
                     a retirar su consentimiento en cualquier momento.</p>
