responsive todas las plataformas

--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -55,11 +55,9 @@
             <div class="porqueadmin">
                 <div class="tituloadmin">
                     <h1>¿POR QUE ELEGIRNOS?</h1>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fugiat vitae veritatis
-                        nostrum placeat, nam
-                        excepturi expedita sit. Sit laudantium doloremque, sequi odio aliquid quaerat itaque aut
-                        similique
-                        numquam totam expedita?</p>
+                    <p> Somos una empresa con basta experiencia en el mercado. Nos enfocamos en aprender y evolucionar
+                        constantemente adaptándonos, incluso, a las nuevas normativas. Garantizamos absoluta confiabilidad y profesionalismo. Contamos con un equipo de profesionales dedicados a brindar soluciones posibles a cada caso concreto.
+                    </p>
                 </div>
                 <div class="cuadro1">
                     <h2>Confianza</h2>
