--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -57,21 +57,23 @@
         </section>
         <section>
             <div class="textosomos">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi autem enim consequuntur in
-                    sapiente architecto inventore dolorum voluptatibus voluptatem ipsum, ipsa aperiam, debitis fugit
-                    perferendis laborum labore impedit fugiat. Ullam?</p>
+                <p>Somos ELEVE Negocios Inmobiliarios. Nacimos en la Ciudad de Rosario. Somos una empresa joven que con
+                    amplio profesionalismo desarrolla sus tareas a diario con la mayor de las exigencias posibles. </p>
                 <h2>Misión</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse accusantium maxime iste minima ipsa
-                    ratione laboriosam vel blanditiis iure obcaecati ut temporibus molestias consequatur, tenetur velit
-                    placeat libero? Hic, maiores!</p>
+                <p>Tenemos como misión brindar el óptimo servicio disponible para nuestros clientes, como así también concretar con éxito todas nuestras operaciones inmobiliarias.</p>
                 <h2>Vision</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse accusantium maxime iste minima ipsa
-                    ratione laboriosam vel blanditiis iure obcaecati ut temporibus molestias consequatur, tenetur velit
-                    placeat libero? Hic, maiores!</p>
+                <p>Nuestra vision es ser reconocidos como agencia líder en cuestion inmobiliaria, destacándonos por la calidez de nuestro
+                    personal y calidad de prestación de servicios.</p>
                 <h2>Valores</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse accusantium maxime iste minima ipsa
-                    ratione laboriosam vel blanditiis iure obcaecati ut temporibus molestias consequatur, tenetur velit
-                    placeat libero? Hic, maiores!</p>
+                <p>
+                    <li> Pasión por Nuestro Trabajo</li>
+                    <li>Atención personalizada</li>
+                    <li>Responsabilidad</li>
+                    <li>Honestidad</li>
+                    <li>Determinación en el logro de los objetivos</li>
+                    <li>Adaptabilidad a los permanentes cambios</li>
+                    <li>Sencillez y solidez</li>
+                </p>
             </div>
         </section>
 
@@ -107,34 +109,34 @@
 
         <!--PIE DE PAGINA-->
         <section id="piedepagina">
-                <div class="piecolum1">
-                    <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
-                    <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
-                            1811 Of. 01</li></a>
-                    <li class="textopie">Teléfono: (0341) 3132818</li>
-                    <li><a class="textopie"
-                            href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
-                </div>
-                <div class="titulomenupie">
-                    <h4>SERVICIOS</h4>
-                    <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
-                    <li><a class="textomenupie" href="administracion.html">Administración</a></li>
-                    <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
-                    <li><a class="textomenupie" href="venta.html">Venta</a>
-                    <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
-                    <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
-                    </p>
-                </div>
-                <div class="newsletter">
-                    <h4>NEWSLETTER</h4>
-                    <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
-                    <input type="submit" value="Suscribirse"></p>
-                </div>
-                <div class="redespie">
-                    <h4>REDES</h4>
-                    <a href="https://www.facebook.com/" target="blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
-                    <a href="https://www.instagram.com/" target="blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
-                </div>
+            <div class="piecolum1">
+                <li class="logopie"><img width="210" src="../img/logo blanco.png" alt="logo_blanco"></li>
+                <li class="textopie"><a href="https://goo.gl/maps/s8B6XoEcNeYv6Ysq9" target="blank">Av. Pellegrini
+                        1811 Of. 01</li></a>
+                <li class="textopie">Teléfono: (0341) 3132818</li>
+                <li><a class="textopie"
+                        href="mailto:contacto@elevepropiedades.com.ar">contacto@elevepropiedades.com.ar</a></li>
+            </div>
+            <div class="titulomenupie">
+                <h4>SERVICIOS</h4>
+                <li><a class="textomenupie" href="quienessomos.html">Quienes Somos</a></li>
+                <li><a class="textomenupie" href="administracion.html">Administración</a></li>
+                <li><a class="textomenupie" href="alquiler.html">Alquiler</a>
+                <li><a class="textomenupie" href="venta.html">Venta</a>
+                <li><a class="textomenupie" href="contacto.html">Contacto</a></li>
+                <li><a class="textomenupie" href="termycond.html">Políticas de Privacidad</a></li>
+                </p>
+            </div>
+            <div class="newsletter">
+                <h4>NEWSLETTER</h4>
+                <input type="text" placeholder="Ingresá tu Mail" name="mail" required>
+                <input type="submit" value="Suscribirse"></p>
+            </div>
+            <div class="redespie">
+                <h4>REDES</h4>
+                <a href="https://www.facebook.com/" target="blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
+                <a href="https://www.instagram.com/" target="blank"><i class="fa-brands fa-instagram fa-2x"></i></a>
+            </div>
             </div>
         </section>
         <!--FIN PIE DE PAGINA-->
