--- a/pages/alquiler.html
+++ b/pages/alquiler.html
@@ -102,7 +102,12 @@
         </div>
 
         <!--FIN BUSCADOR DE PROPIEDADES-->
-
+        <section>
+            <div class="menuretorno">
+                <div class="index"><a href="../index.html"> INICIO</a></div>
+                <div class="page">/ ALQUILER</div>
+            </div>
+        </section>
 
         <!--propiedades alquiler-->
         <section class="main">
