--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -52,10 +52,16 @@
         <!--formulario contacto-->
         <section class="quienessomosfondo">
             <div class="quienessomos">
-                <h1>CONTACTO</h1>
+                <h1>CONTACTANOS</h1>
             </div>
         </section>
         <section>
+
+           <div class="menuretorno">
+                    <div class="index"><a href="../index.html"> INICIO</a></div>
+                    <div class="page">/ CONTACTO</div>
+            </div>
+
             <div class="grid-container">
                 <div class="formcontacto">
                     <div class="tipoform">
@@ -85,7 +91,7 @@
 
 
 
-        
+
         <!--cartel de contacto-->
         <section id="cartelcontacto">
             <div class="carteldecontacto">
