--- a/pages/quienessomos.html
+++ b/pages/quienessomos.html
@@ -56,13 +56,21 @@
             </div>
         </section>
         <section>
+            <div class="menuretorno">
+                <div class="index"><a href="../index.html"> INICIO</a></div>
+                <div class="page">/ QUIENES SOMOS</div>
+            </div>
+        </section>
+        <section>
             <div class="textosomos">
                 <p>Somos ELEVE Negocios Inmobiliarios. Nacimos en la Ciudad de Rosario. Somos una empresa joven que con
                     amplio profesionalismo desarrolla sus tareas a diario con la mayor de las exigencias posibles. </p>
                 <h2>Misión</h2>
-                <p>Tenemos como misión brindar el óptimo servicio disponible para nuestros clientes, como así también concretar con éxito todas nuestras operaciones inmobiliarias.</p>
+                <p>Tenemos como misión brindar el óptimo servicio disponible para nuestros clientes, como así también
+                    concretar con éxito todas nuestras operaciones inmobiliarias.</p>
                 <h2>Vision</h2>
-                <p>Nuestra vision es ser reconocidos como agencia líder en cuestion inmobiliaria, destacándonos por la calidez de nuestro
+                <p>Nuestra vision es ser reconocidos como agencia líder en cuestion inmobiliaria, destacándonos por la
+                    calidez de nuestro
                     personal y calidad de prestación de servicios.</p>
                 <h2>Valores</h2>
                 <p>
