--- a/pages/termycond.html
+++ b/pages/termycond.html
@@ -51,6 +51,12 @@
             <h1>POLÍTICA DE PRIVACIDAD Y PROTECCIÓN DE DATOS</h1>
         </section>
         <section>
+            <div class="menuretorno">
+                <div class="index"><a href="../index.html"> INICIO</a></div>
+                <div class="page">/ PRIVACIDAD</div>
+            </div>
+        </section>
+        <section>
             <div class="politicas">
                 <h2>1. Registro de Datos de Carácter Personal</h2>
                 <p>Le informamos que los datos personales recabados por la Empresa mediante los formularios extendidos
