--- a/pages/venta.html
+++ b/pages/venta.html
@@ -102,7 +102,12 @@
         </div>
 
         <!--FIN BUSCADOR DE PROPIEDADES-->
-
+        <section>
+            <div class="menuretorno">
+                <div class="index"><a href="../index.html"> INICIO</a></div>
+                <div class="page">/ VENTA</div>
+            </div>
+        </section>
         <!--propiedades venta-->
         <section class="main">
             <div class="df-main">
