--- a/pages/administracion.html
+++ b/pages/administracion.html
@@ -208,6 +208,10 @@
         </div>
     </footer>
     <!-- FIN DEL FOOTER-->
+    <a href="https://walink.co/541ed3" class="whatsapp" target="_blank"> <i
+        class="fa fa-whatsapp whatsapp-icon"></i></a> </div>
+<a href="#" class="back-to-top" style="display: inline;"><i class="fa fa-chevron-up"></i></a>
+
 </body>
 
 </html>
